# Bank-Default-Prediction-ScoringHMEQ

./: Analyse_exploratoire_des_données.ipynb  README.md  pyproject.toml
sandbox/: Modèle_Regression_Logistique.ipynb  Modèle_XGBOOST.ipynb
